# uuv_simulator

install/rbim_world/share/rbim_world/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rbim_world/share/rbim_world/cmake/: rbim_worldConfig-version.cmake  rbim_worldConfig.cmake
install/rbim_world/share/rbim_world/environment/: ament_prefix_path.dsv  path.dsv
install/rbim_world/share/rbim_world/launch/: chiton_world.launch.py  fpso.launch  fpso_simulation.launch  fpso_simulation.launch.py  rbim_simulator.launch  rbim_world.launch  sup_ship.launch
install/rbim_world/share/rbim_world/worlds/: rbim_world.world  rbim_world_fpso_and_sup.world  rbim_world_sup.world
install/uuv_gazebo_ros_plugins/share/uuv_gazebo_ros_plugins/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
install/uuv_gazebo_ros_plugins/share/uuv_gazebo_ros_plugins/cmake/: ament_cmake_export_include_directories-extras.cmake  uuv_gazebo_ros_pluginsConfig-version.cmake  uuv_gazebo_ros_pluginsConfig.cmake
install/uuv_gazebo_ros_plugins/share/uuv_gazebo_ros_plugins/environment/: ament_prefix_path.dsv  path.dsv
install/uuv_gazebo_ros_plugins/share/uuv_gazebo_ros_plugins/urdf/: battery_snippets.xacro  fin_snippets.xacro  misc.xacro  (+2 more)
install/uuv_sensor_ros_plugins/share/uuv_sensor_ros_plugins/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
install/uuv_world_plugins/share/uuv_world_plugins/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
rbim_world/: CMakeLists.txt
rbim_world/launch/: fpso.launch
rbim_world/models/fpso_rbim/: model.sdf
rbim_world/models/fpso_rbim/textures/: fpso_rbim.mtl
rbim_world/models/seabed/: model.config
rbim_world/models/sup_ship/: manifest.xml
rbim_world/models/sup_ship/config/: support.yaml
rbim_world/worlds/: rbim_world.world
uuv_control/uuv_thruster_manager/: package.xml  setup.cfg  setup.py
uuv_control/uuv_thruster_manager/launch/: thruster_manager.launch.py
uuv_control/uuv_thruster_manager/urdf/: robot.urdf
uuv_control/uuv_thruster_manager/uuv_thruster_manager/: __init__.py  robot.urdf  thruster.py  thruster_allocator.py  thruster_custom.py  thruster_manager.py  thruster_proportional.py
uuv_control/uuv_thruster_manager_msgs/: CMakeLists.txt  package.xml
uuv_descriptions/: CMakeLists.txt
uuv_descriptions/launch/: message_to_tf.launch.py  rexrov.urdf  upload_rexrov.launch.py  upload_rexrov_default.launch.py
uuv_descriptions/src/: message_to_tf.cpp
uuv_descriptions/urdf/: rexrov_base.xacro
uuv_gazebo_plugins/: CMakeLists.txt  package.xml
uuv_gazebo_plugins/include/uuv_gazebo_plugins/: BuoyantObject.hpp  Dynamics.hh  FinPlugin.hh  HydrodynamicModel.hpp  JointStatePublisher.hpp  ThrusterConversionFcn.hh  UmbilicalModel.hh  UmbilicalPlugin.hh  UnderwaterObjectPlugin.hpp
uuv_gazebo_plugins/src/: BuoyantObject.cpp  Dynamics.cc  HydrodynamicModel.cpp  JointStatePublisher.cpp  ThrusterPlugin.cpp  UmbilicalModel.cc  UmbilicalPlugin.cc  UnderwaterObjectPlugin.cpp
uuv_gazebo_plugins/urdf/: snippets.xacro
uuv_gazebo_plugins/uuv_gazebo_plugins/: CMakeLists.txt  package.xml
uuv_gazebo_plugins/uuv_gazebo_plugins/include/uuv_gazebo_plugins/: BuoyantObject.hh  ThrusterPlugin.hpp
uuv_gazebo_plugins/uuv_gazebo_plugins/src/: BuoyantObject.cc  HydrodynamicModel.cc  ThrusterConversionFcn.cc  ThrusterPlugin.cpp
uuv_gazebo_plugins/uuv_gazebo_ros_plugins/: CMakeLists.txt
uuv_gazebo_plugins/uuv_gazebo_ros_plugins/include/uuv_gazebo_ros_plugins/: AccelerationsTestPlugin.hh  CustomBatteryConsumerROSPlugin.hh  FinROSPlugin.hh  JointStatePublisher.hh  LinearBatteryROSPlugin.hh  ThrusterROSPlugin.hh  UnderwaterObjectROSPlugin.hh
uuv_gazebo_plugins/uuv_gazebo_ros_plugins/src/: AccelerationsTestPlugin.cc  CustomBatteryConsumerROSPlugin.cc  JointStatePublisher.cc  ThrusterROSPlugin.cc
uuv_gazebo_ros_plugins/: CMakeLists.txt
uuv_gazebo_ros_plugins/include/uuv_gazebo_ros_plugins/: JointStatePublisher.hh
uuv_gazebo_ros_plugins/src/: JointStatePublisher.cc  ThrusterROSPlugin.cc
uuv_gazebo_ros_plugins_msgs/: CMakeLists.txt
uuv_gazebo_worlds/: CMakeLists.txt  package.xml
uuv_gazebo_worlds/env-hooks/: uuv_gazebo_worlds.dsv.in  uuv_gazebo_worlds.sh.in
uuv_gazebo_worlds/media/materials/scripts/: sand.material
uuv_gazebo_worlds/models/april_tag_36_11_00000/: model.sdf
uuv_gazebo_worlds/models/bop_panel/: model.sdf
uuv_gazebo_worlds/models/box/: model.config  model.sdf
uuv_gazebo_worlds/models/herkules_seabed/: model.sdf
uuv_gazebo_worlds/models/lake/: model.sdf
uuv_gazebo_worlds/models/mangalia/: model.sdf
uuv_gazebo_worlds/models/munkholmen_seabed/: model.sdf
uuv_gazebo_worlds/models/ned_frame/: model.sdf
uuv_gazebo_worlds/models/ocean/: model.sdf
uuv_gazebo_worlds/models/ocean_box/: model.sdf
uuv_gazebo_worlds/models/sand_heightmap/: model.sdf
uuv_gazebo_worlds/models/sea_bottom/: model.sdf
uuv_gazebo_worlds/models/sea_surface/: model.sdf
uuv_gazebo_worlds/worlds/: empty_underwater.world
uuv_sensor_plugins/uuv_sensor_ros_plugins_msgs/: CMakeLists.txt
uuv_sensor_ros_plugins/: CMakeLists.txt
uuv_world_plugins/: CMakeLists.txt
uuv_world_plugins/include/uuv_world_plugins/: uuv_world_plugins_gauss_markov_process.hpp  uuv_world_plugins_spherical_coordinates.hpp  uuv_world_plugins_underwater_current.hpp
uuv_world_plugins/src/: uuv_world_plugins_gauss_markov_process.cpp  uuv_world_plugins_spherical_coordinates.cpp  uuv_world_plugins_underwater_current.cpp
uuv_world_plugins/uuv_world_plugins/: CMakeLists.txt
uuv_world_plugins/uuv_world_plugins/include/uuv_world_plugins/: uuv_world_plugins_gauss_markov_process.hpp
uuv_world_plugins/uuv_world_plugins/src/: uuv_world_plugins_gauss_markov_process.cpp  uuv_world_plugins_spherical_coordinates.cpp  uuv_world_plugins_underwater_current.cpp
uuv_world_plugins/uuv_world_ros_plugins_msgs/: CMakeLists.txt
(+849 files in other folders)
