<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uuv_sensor_ros_plugins</name>
  <version>0.0.1</version>
  <description>
    Robot-independent Gazebo plugins for sensors, motors and dynamic reconfigurable components.
  </description>

  <maintainer email="jrivero@osrfoundation.org">Jose Luis Rivero</maintainer>
  <maintainer email="louise@openrobotics.org">Louise Poubel</maintainer>

  <license>BSD, Apache 2.0</license>

  <url type="website">http://gazebosim.org/tutorials?cat=connect_ros</url>
  <url type="bugtracker">https://github.com/ros-simulation/gazebo_ros_pkgs/issues</url>
  <url type="repository">https://github.com/ros-simulation/gazebo_ros_pkgs</url>

  <author>John Hsu</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_dev</depend>
  <depend>gazebo_plugins</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>uuv_gazebo_plugins</depend>
  <depend>uuv_sensor_ros_plugins_msgs</depend>
  <depend>tf</depend>
  <depend>message_filters</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>image_transport</depend>
  <depend>laser_geometry</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
